<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boga Fit</string>

    <string name="loading_message">Loading…</string>

    <string name="physictivities_navigation_title">Activities</string>
    <string name="profile_navigation_title">Profile</string>

    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_phone_number_label">Phone number</string>
    <string name="sign_in_phone_warning">You might receive a text message with a verification code. Standard text message rates may apply.</string>
    <string name="sign_in_email_label">E-mail</string>
    <string name="sign_in_password_label">Password</string>
    <string name="sign_in_email_next_button">Continue with e-mail</string>
    <string name="sign_in_sign_up_button">I don\'t have an account yet</string>
    <string name="sign_in_other_methods">Other sign in methods</string>
    <string name="sign_in_phone_number_button">Sign in with phone number</string>
    <string name="sign_in_next_button">Next</string>
    <string name="sign_in_loading_message">Signing in…</string>
    <string name="sign_in_error_missing_email">Enter an e-mail address</string>
    <string name="sign_in_error_invalid_email">Enter a valid e-mail address</string>
    <string name="sign_in_error_missing_password">Enter a password</string>
    <string name="sign_in_error_invalid_credentials">The e-mail and password don\'t match. Please make sure you entered them correctly.</string>
    <string name="sign_in_error_server">There was an error signing in. Please try again later.</string>

    <string name="sign_in_phone_verification_error">Cannot verify your phone number. Please make sure you entered it correctly.</string>
    <string name="sign_in_phone_verification_loading">Verifying phone number…</string>

    <string name="sign_in_phone_check_code_title">Verify phone number</string>
    <string name="sign_in_phone_check_code_subtitle">A text message containing a 6-digit verification code was sent to the number %1$s. When you receive the message, enter the code in the box below.</string>
    <string name="sign_in_phone_check_code_code_label">Verification code</string>
    <string name="sign_in_phone_check_code_button">Validate code</string>
    <string name="sign_in_phone_check_code_loading">Validating verification code…</string>
    <string name="sign_in_phone_check_code_error_invalid_credentials">The verification code is incorrect</string>
    <string name="sign_in_phone_check_code_error_collision">There is another account using that phone number. Please enter a different number.</string>
    <string name="sign_in_phone_check_code_error_server">There was an error verifying your phone number. Try again later.</string>

    <string name="sign_in_password_title">Verify password</string>
    <string name="reset_password_button">I forgot my password</string>
    <string name="reset_password_confirmation_title">Reset password</string>
    <string name="reset_password_message">An e-mail will be sent to %1$s with instructions on how to reset your password.
        If an account with that e-mail doesn\'t exist, no e-mail will be sent.
        \n\nDo you want to proceed?</string>
    <string name="reset_password_positive_button">Yes, send e-mail</string>
    <string name="reset_password_loading_message">Sending e-mail…</string>
    <string name="reset_password_error_server">There was an error sending the e-mail. Please try again later.</string>

    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_loading_message">Signing up…</string>
    <string name="sign_up_error_server">There was an error signing up. Please try again later.</string>

    <string name="list_physictivities_title">Physical activities</string>
    <string name="list_physictivities_loading_message">Loading physical activities information…</string>
    <string name="list_physictivities_error_server">There was an error loading the physical activities. Try again later.</string>
    <string name="list_physictivities_count_label">Number of physical activities:</string>

    <string name="settings_title">Settings</string>
    <string name="settings_category_physictivity_goal">Physical activity goal</string>
    <string name="settings_enable_physictivity_goal">Enable goal</string>
    <string name="settings_physictivity_goal">Days with physical activity (per year)</string>

    <string name="save_physictivity_date_label">Date:</string>
    <string name="save_physictivity_physictivity_label">Physical activity:</string>
    <string name="save_physictivity_loading_message">Saving physical activity…</string>
    <string name="save_physictivity_error_server">There was an error saving the physical activity. Try again later.</string>
    <string name="save_physictivity_delete_menu">Delete</string>
    <string name="save_physictivity_delete_loading_message">Deleting physical activity…</string>
    <string name="save_physictivity_delete_error_server">There was an error deleting the physical activity. Try again later.</string>

    <string name="add_physictivity_title">Add physical activity</string>
    <string name="add_physictivity_save_button">Add</string>

    <string name="edit_physictivity_title">Edit physical activity</string>
    <string name="edit_physictivity_save_button">Edit</string>

    <string name="measurements_navigation_title">Measurements</string>
    <string name="measurements_title">My body measurements</string>
    <string name="weight_label">Weight</string>
    <string name="edit_weight_error">There was an error updating the weight. Try again later.</string>
    <string name="height_label">Height</string>
    <string name="edit_height_error">There was an error updating the height. Try again later.</string>
    <string name="bmi_title">Body mass index</string>
    <string name="bmi_underweight_description">Underweight</string>
    <string name="bmi_normal_weight_description">Normal weight</string>
    <string name="bmi_overweight_description">Overweight</string>
    <string name="bmi_obese_description">Obese</string>
    <string name="bfp_title">Body fat percentage</string>

    <string name="profile_title">My profile</string>
    <string name="profile_load_user_data_error">There was an error loading your personal data. Try again later.</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_edit_loading">Updating…</string>
    <string name="profile_edit_name_error">There was an error updating the name. Try again later.</string>
    <string name="profile_birth_date_label">Birth date</string>
    <string name="profile_edit_birth_date_error">There was an error updating the birth date. Try again later.</string>
    <string name="profile_gender_label">Gender</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_edit_gender_error">There was an error updating the gender. Try again later.</string>
    <string name="profile_update_phone_number_title">Change phone number</string>
    <string name="profile_remove_phone_number_button">Remove current phone number</string>
    <string name="profile_remove_phone_number_loading">Removing…</string>
    <string name="profile_cannot_remove_phone_number_message">You cannot remove your number now because it\'s the only way to sign in to this account.</string>
    <string name="profile_remove_phone_number_error">There was an error removing the phone number. Try again later.</string>
    <string name="profile_sign_out_button">Sign out</string>

    <string name="empty_string_value">Empty</string>
    <string name="no_value">-</string>

    <string name="WEIGHT_LIFTING">Weight lifting</string>
    <string name="RUNNING">Running</string>
    <string name="TREADMILL_RUNNING">Treadmill running</string>
    <string name="WALKING">Walking</string>
    <string name="BIKING">Biking</string>
    <string name="unknown_physictivity">Unknown physical activity</string>
</resources>
