<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.gmail.cristiandeives.bogafit.SignInPhoneNumberViewModel" />

        <variable name="vm" type="com.gmail.cristiandeives.bogafit.SignInPhoneNumberViewModel" />
        <variable name="action" type="com.gmail.cristiandeives.bogafit.SignInPhoneNumberActionHandler" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/sign_in_phone_number_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:helperTextEnabled="true"
                app:helperText="@string/sign_in_phone_warning">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.phoneNumber}"
                    android:inputType="phone"
                    android:autofillHints="phoneNumber"
                    android:maxLength="@{SignInPhoneNumberViewModel.PHONE_NUMBER_MAX_LENGTH}"
                    tools:text="+55 (19) 98888-7777" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:enabled="@{vm.canVerifyPhoneNumber}"
                android:text="@string/sign_in_next_button"
                android:onClick="@{action::onNextButtonClick}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_edit" />

            <Button
                android:id="@+id/remove_phone_number_button"
                style="@style/AppTheme.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{vm.removePhoneNumberButtonVisibility}"
                android:text="@string/profile_remove_phone_number_button"
                android:onClick="@{action::onRemovePhoneNumberButtonClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>