<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.gmail.cristiandeives.bogafit.SignInViewModel" />

        <variable name="vm" type="com.gmail.cristiandeives.bogafit.SignInViewModel" />
        <variable name="action" type="com.gmail.cristiandeives.bogafit.SignInMainActionHandler" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/sign_in_email_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.email}"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:maxLength="@{SignInViewModel.EMAIL_MAX_LENGTH}"
                    tools:text="johnsmith@example.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:enabled="@{vm.canEnterPassword}"
                android:onClick="@{action::onNextButtonClick}"
                android:text="@string/sign_in_next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_edit" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                style="@style/AppTheme.TextButton"
                android:text="@string/sign_in_sign_up_button"
                android:onClick="@{action::onSignUpButtonClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>