<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="vm" type="com.gmail.cristiandeives.bogafit.SignInPasswordViewModel" />
        <variable name="action" type="com.gmail.cristiandeives.bogafit.SignInPasswordActionHandler" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/sign_in_password_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_internal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.password}"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    tools:text="password123" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:enabled="@{vm.canSignIn}"
                android:onClick="@{action::onSignInButtonClick}"
                android:text="@string/sign_in_title"
                android:theme="@style/AppTheme.MainButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit" />

            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                style="@style/AppTheme.TextButton"
                android:text="@string/reset_password_button"
                android:onClick="@{action::onForgotPasswordButtonClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>